# estudos_django

./: .env.example  .env.test  .gitignore  .pylintrc  Makefile  README.md  db.sqlite3  package.json  pyproject.toml  pytest.ini
app/: settings.py  urls.py
app/shared/utils/: ulid_genarate_utils.py
app/templates/: base.html
app/templates/home/: home.html
docker/: Dockerfile
products/: admin.py  apps.py  models.py  views.py
products/migrations/: 0001_initial.py  0002_alter_brand_options_alter_stock_options_and_more.py  0003_product_photo_stock_min_quantity.py
products/static/products/: admin_image_preview.js  admin_photo_preview.js
rr/: conftest.py  main.py
rr/category/domain/: category_entities.py
rr/category/domain/test/integration/: category_int_entities_test.py
rr/shared/domain/: exceptions.py  validators.py
rr/shared/domain/test/: deafault_entity_test.py  test_validators.py
shared/: apps.py  models.py  signals.py
shared/utils/: ulid_genarate_utils.py
src/: settings.py
src/category/domain/: entities.py
src/category/domain/test/unit/: category_unit_entities_test.py
src/category/test/: entities_test.py
src/shared/domain/: default_entity.py  exceptions.py  validators.py
src/shared/domain/test/: deafault_entity_test.py  test_validators.py
src/test/: init_env.py
static/css/: input.css  output.css
